# RetianEvo

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
notebooks/: CNN_Model_2Classes.ipynb
retina_evo/: __init__.py
retina_evo/data/: __init__.py  datasets.py  loaders.py  transforms.py
retina_evo/ga/: __init__.py  evolution.py  fitness.py  genes.py  operators.py
retina_evo/models/: __init__.py  classifier.py
retina_evo/preprocessing/: __init__.py  image_ops.py  pipeline.py
retina_evo/training/: __init__.py  early_stopping.py  trainer.py
retina_evo/utils/: __init__.py  config.py  seed.py
tests/: test_genes.py  test_model_builder.py  test_operators.py
